# KN1DPy

./: .gitattributes  .gitignore  000_maxwell_data.sav  001_init_variables.pro  002_make_dvr_dvx.pro  003_var.pro  004_create_vrvxmesh.pro  005_key_default.pro  006_type_of.pro  007_init_variables2.pro  008_create_shifted_maxwellian.pro  009_create_shifted_maxwellian.include  022_Vth2.npy  023_mH.npy  024_q.npy  025_Maxwell.npy  Dependencies.xlsx  JHAlpha_coef.py  JHR_coef.py  JHS_coef.py  KN1D.pptx  KN1D.py  KN1D.xlsx  KN1D_while_to_for.py  Make_dVr_dVx  Make_dVr_dVx.py  N0_from_balmer_alpha.py  NHSaha  NHSaha.py  README.md  Register.ipynb  Revoff  Revoff.py  Revon  Revon.py  Test.py  Test_Client_OAuth.py  balmer_alpha.py  client_secret_OAuth.json  cmod_comp.py  (+261 more)
IDL/: Nick_test_kn1d.pro  Nick_test_simple.pro  balmer_alpha.pro  bs2dr.pro  color.pro  comb.pro  create_jh_bscoef.pro  create_kinetic_h2_mesh.pro  create_kinetic_h_mesh.pro  create_shifted_maxwellian.include  create_shifted_maxwellian.pro  create_vrvxmesh.pro  data2normal.pro  fb.sav  file_present.pro  integ_bl.pro  interp_fvrvxx.pro  interp_scalarx.pro  interpol.pro  jamie_test_balmer_alpha.pro  jamie_test_create_kinetic_h2_mesh.pro  jamie_test_create_kinetic_h_mesh.pro  jamie_test_create_shifted_maxwellian.pro  jamie_test_create_vrvxmesh.pro  jamie_test_jhalpha_coef.pro  jamie_test_jhs_coef.pro  jamie_test_locate.pro  jamie_test_lyman_alpha.pro  jamie_test_make_dvr_dvx.pro  jamie_test_make_sigmav.pro  jamie_test_normal2data.pro  jamie_test_path_interp_2D.pro  jhalpha_coef.pro  jhr_coef.pro  jhs_coef.pro  kinetic_h.pro  kinetic_h2.pro  kn1d.pro  locate.pro  lyman_alpha.pro  (+60 more)
KN1DPy/: N0_from_balmer_alpha.py  balmer_alpha.py  collrad_sigmav_ion_h0.py  comb.py  create_kinetic_h2_mesh.py  create_kinetic_h_mesh.py  create_shifted_maxwellian.py  create_shifted_maxwellian_include.py  create_sigmav_el_h2_p_bscoef.py  create_sigmav_el_h2_p_data.py  create_sigmav_el_h_p_bscoef.py  create_vr_vx_mesh.py  (+38 more)
(+262 files in other folders)
