[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KN1DPy"
version = "0.1.0"
requires-python = ">=3.7"

dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
]

[project.scripts]
kn1d = "KN1DPy.main:run"
kn1d_lite = "KN1DPy.main:run_lite"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.7"
numpy = ">=1.21"
scipy = ">=1.7"
matplotlib = ">=3.5"

[tool.pixi.pypi-dependencies]
KN1DPy = { path = ".", editable = true }

[tool.setuptools.packages.find]
where = ["."]
